force-app/main/default/objects/AuthorisedrepresentativeSOBHAforBrokerDo__mdt/AuthorisedrepresentativeSOBHAforBrokerDo__mdt.object-meta.xml
<CustomObject>
    <label>AuthorisedrepresentativeSOBHAforBrokerDo</label>
    <pluralLabel>Authorised representative Docusign</pluralLabel>
</CustomObject>