force-app/main/default/objects/AuthorisedrepresentativeSOBHAforBrokerDo__mdt/fields/Authorised_Representative__c.field-meta.xml
<CustomField>
    <fullName>Authorised_Representative__c</fullName>
    <label>Authorised Representative</label>
    <type>Email</type>
</CustomField>