force-app/main/default/objects/AuthorisedrepresentativeSOBHAforBrokerDo__mdt/fields/Print_name_of_Authorised_Representative__c.field-meta.xml
<CustomField>
    <fullName>Print_name_of_Authorised_Representative__c</fullName>
    <label>Print name of Authorised Representative.</label>
    <length>90</length>
    <type>Text</type>
</CustomField>